# JACE

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: integrated-test-actions.yml
src/: CMakeLists.txt
src/include/: bitboard.h  board.h  move.h  perft.h  types.h  uci.h
src/sources/: board.cpp  main.cpp  test.cpp  test_main.cpp  tests.cpp
src/sources/board/: board.cpp  legal_moves.cpp  make_move.cpp  zobrist.cpp
src/sources/moves/: masks.cpp  piece_moves.cpp  sliding_attacks.cpp
src/sources/perft/: perft.cpp
src/sources/types/: types.cpp
src/sources/uci/: uci.cpp
